--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Users</h1>
-
-<table>
+<%= will_paginate %>
+<table class="table">
   <thead>
     <tr>
       <th>Name</th>
       <th>Email</th>
-      <th colspan="3"></th>
+      <th colspan="3">Action</th>
     </tr>
   </thead>
 
@@ -23,6 +23,7 @@
     <% end %>
   </tbody>
 </table>
+<%= will_paginate %>
 
 <br>
 
