--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
     <%= link_to "Game Geek", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Home", root_path %></li>
+        <li><%= link_to "Images", img_index_path %></li>
         <li><%= link_to "Help", '#' %></li>
         <% if logged_in? %>
           <li><%= link_to "Users", users_path %></li>
