--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -20,5 +20,28 @@
   <%= @image.created_at %>
 </p>
 
+<h2>Comment Form</h2>
+<%= form_for(@image_comment) do |f| %>
+<div class="field">
+	<%= f.label :comment %><br>
+	<%= f.text_field :comment %><br>
+	<%= f.hidden_field :image_id, :value => @image.id %><br>
+</div>
+
+<div class="actions">
+<%=f.submit %>
+</div>
+<% end %>
+
+
+<h2>Review comment</h2>
+<ul>
+<% @image.image_comment.each do |image_comment| %>
+    <li> <%= image_comment.comment %> (<i> <%= image_comment.user_id %> </i>)</li>
+    
+<% end %>
+</ul>
+
+
 <%= link_to 'Edit', edit_image_path(@image) %> |
 <%= link_to 'Back', images_path %>
