--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -1,25 +1,29 @@
-<%= form_for(@image, {multipart: true}) do |f| %>
-  <% if @image.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@image.errors.count, "error") %> prohibited this image from being saved:</h2>
 
-      <ul>
-      <% @image.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+<div class="modal-dialog">
+  <div class="modal-content">
+  <%= form_for(@image, {multipart: true}) do |f| %>
+    <% if @image.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@image.errors.count, "error") %> prohibited this image from being saved:</h2>
 
-  <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
+        <ul>
+        <% @image.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+      <div class="form-group">
+        <%= f.label :title,class: "control-label"  %><br>
+        <%= f.text_field :title,class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :file,class: "control-label" %><br>
+        <%= f.file_field :file,class: "form-control" %>
+      </div>
+      <div class="modal-footer">
+        <%= f.submit class: "btn btn-primary" %>
+      </div>
+    <% end %>
   </div>
-  <div class="field">
-    <%= f.label :file %><br>
-    <%= f.file_field :file %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+</div>
