--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,33 +1,54 @@
 <p id="notice"><%= notice %></p>
-
-<h1 class="demo">Listing Images</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>User</th>
-      <th>Title</th>
-      <th>File</th>
-      <th>Created at</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @images.each do |image| %>
-      <tr>
-        <td><%= image.user.email %></td>
-        <td><%= image.title %></td>
-        <td><%= image_tag image.file %></td>
-        <td><%= image.created_at %></td>
-        <td><%= link_to 'Show', image %></td>
-        <td><%= link_to 'Edit', edit_image_path(image) %></td>
-        <td><%= link_to 'Destroy', image, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<h1>Listing Images</h1>
+<div class="row main-content">
+    <% @images.each_with_index do |image,index| %>
+    <div class="col-sm-12">
+      <article class="clearfix" >
+        <header class="user-info clearfix">
+          <figure class="avartar"><%= gravatar_for image.user %></figure>
+          <p class="name"><%= link_to image.user.name,image.user %></p>
+        </header>
+        <figure class="image">
+          <%= image_tag image.file %>
+        </figure>
+        <div class="content">
+          <span class="name"><%= link_to image.user.name,image.user %></span>
+          <span class="title clearfix"><%=image.title %></span>
+        </div>
+        <div class="comment clearfix">
+          <ul id="<%=image.id%>">
+          <%image.image_comment.each do |comment| %>
+            <li class="clearfix">
+              <span class="name"><%= link_to comment.user.name,comment.user %></span>
+              <span><%=comment.comment%></span>
+            </li>
+          <%end%>
+          </ul>
+          <header>Comment</header>
+          <div style="height: 30px; margin-bottom: 10px;">
+            <figure><%= gravatar_for current_user %></figure>
+            <form class="form-group" data-remote="true" action="/image_comments" accept-charset="UTF-8" method="post">
+              <input type="text" name="image_comment[comment]" value="" class="form-control input" id="input<%=image.id%>">
+              <input value="<%=image.id%>" name="image_comment[image_id]" type="hidden">
+              <input value="<%=current_user.id%>" name="image_comment[user_id]" type="hidden">
+            </form>
+          </div>
+        </div>
+        <div class="col-sm-5 iconTool">
+          <div class="col-sm-4"><%= link_to '', image,class: "fa fa-eye" %></div>
+          <div class="col-sm-4"><%= link_to '',edit_image_path(image),class: "fa fa-pencil-square" %></div>
+          <div class="col-sm-4"><%= link_to '', image,class: "fa fa-trash",method: :delete, data: { confirm: 'Are you sure?' } %></div>
+        </div>
+      </article>
+    </div>
     <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Image', new_image_path %>
+</div>
+<%= link_to 'New Image', new_image_path, remote:true %>
+<div id="product-modal" class="modal fade"></div>
+<script type="text/javascript">
+  $("#id_of_textbox").keyup(function(event){
+    if(event.keyCode == 13){
+        $("#id_of_button").click();
+    }
+  });
+</script>
