--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -14,6 +14,11 @@
 .clearfix {
     display: block;
 }
+.center{
+  margin: 0px auto;
+  text-align: center;
+  float: none;
+}
 a:hover{
   color: #125688!important;
   text-decoration: none!important;
