--- a/app/views/images/_form.html.erb
+++ b/app/views/images/_form.html.erb
@@ -1,6 +1,6 @@
 
 <div class="modal-dialog">
-  <div class="modal-content">
+  <div class="modal-content" style="padding:10px">
   <%= form_for(@image, {multipart: true}) do |f| %>
     <% if @image.errors.any? %>
       <div id="error_explanation">
