--- a/app/views/images/_save.js.erb
+++ b/app/views/images/_save.js.erb
@@ -1,3 +1,3 @@
-$('#<%=@image_comment.image_id%>').append("<%= escape_javascript(render 'comment') %>")
+$('#<%=@image_comment.image_id%>').html("<%= escape_javascript(render 'comment') %>")
 $('#input<%=@image_comment.image_id%>').val("");
 $('#image_comment_comment').val("");
