--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,4 +1,3 @@
-<p id="notice"><%= notice %></p>
 <h1>Listing Images</h1>
 <div class="row">
   <div class="col-sm-4 clearfix center" id="search-form">
@@ -26,13 +25,10 @@
         </div>
         <div class="comment clearfix">
           <ul id="<%=image.id%>">
-          <%image.image_comment.each do |comment| %>
-            <li class="clearfix">
-              <span class="name"><%= link_to comment.user.name,comment.user %></span>
-              <span><%=comment.comment%></span>
-            </li>
-          <%end%>
+          <% @comments = image.image_comment%>
+          <%= render 'image_comments/comment' %>
           </ul>
+          <%if logged_in?%>
           <header>Comment</header>
           <div style="height: 30px; margin-bottom: 10px;">
             <figure><%= gravatar_for current_user %></figure>
@@ -42,11 +38,14 @@
               <input value="<%=current_user.id%>" name="image_comment[user_id]" type="hidden">
             </form>
           </div>
+          <% end -%>
         </div>
         <div class="col-sm-5 iconTool">
           <div class="col-sm-4"><%= link_to '', image,class: "fa fa-eye" %></div>
+          <% if image.user == current_user%>
           <div class="col-sm-4"><%= link_to '',edit_image_path(image),class: "fa fa-pencil-square" %></div>
           <div class="col-sm-4"><%= link_to '', image,class: "fa fa-trash",method: :delete, data: { confirm: 'Are you sure?' } %></div>
+          <% end %>
         </div>
       </article>
     </div>
