--- a/app/assets/stylesheets/images.scss
+++ b/app/assets/stylesheets/images.scss
@@ -1,6 +1,7 @@
 // Place all the styles related to the Images controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
 img{
 	max-width:100%;
 	max-height: 100%;
@@ -77,6 +78,7 @@ article .content .title{
     background-color: #fff;
     text-decoration: none!important;
 }
+//comment content
 .comment{
 	padding : 0px 20px;
 	margin-bottom : 10px;
@@ -114,6 +116,26 @@ article .content .title{
     padding-left: 0px;
     margin-right: 10px;
 }
+
+ul.comments li{
+	position:relative;
+	padding:5px;
+}
+ul.comments li{
+	position:relative;
+	padding:5px;
+}
+ul.comments li span.control{
+	position: absolute;
+    left: 95%;
+    top: 10px;
+    display: none;
+}
+
+ul.comments li:hover span.control{
+	display:block;
+}
+//form comment
 article .iconTool{
 	font-size:30px;
 	margin-bottom : 10px 
