--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -24,10 +24,6 @@
           <span class="title clearfix"><%=image.title %></span>
         </div>
         <div class="comment clearfix">
-          <ul id="<%=image.id%>">
-          <% @comments = image.image_comment%>
-          <%= render 'image_comments/comment' %>
-          </ul>
           <%if logged_in?%>
           <header>Comment</header>
           <div style="height: 30px; margin-bottom: 10px;">
@@ -39,6 +35,10 @@
             </form>
           </div>
           <% end -%>
+          <ul id="<%=image.id%>" class="comments">
+          <% @comments = image.image_comment%>
+          <%= render 'image_comments/comment' %>
+          </ul>
         </div>
         <div class="col-sm-5 iconTool">
           <div class="col-sm-4"><%= link_to '', image,class: "fa fa-eye" %></div>
