--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -166,3 +166,10 @@ input {
   margin-left: 0;
 }
 
+// ::-webkit-scrollbar { width: 5px; height: 100px;}
+// ::-webkit-scrollbar-button {  background-color: #666; }
+// ::-webkit-scrollbar-track {  background-color: #999;}
+// ::-webkit-scrollbar-track-piece { background-color: #ffffff;}
+// ::-webkit-scrollbar-thumb { height: 100px; background-color: #666; border-radius: 3px;cursor: pointer}
+// ::-webkit-scrollbar-corner { background-color: #999;}
+// ::-webkit-resizer { background-color: #666;}
