--- a/app/assets/stylesheets/images.scss
+++ b/app/assets/stylesheets/images.scss
@@ -116,7 +116,12 @@ article .content .title{
     padding-left: 0px;
     margin-right: 10px;
 }
-
+ul.comments{
+	overflow-x: hidden;
+	max-height: 200px;
+	width: 100%;
+	overflow-y: scroll;
+}
 ul.comments li{
 	position:relative;
 	padding:5px;
@@ -127,8 +132,8 @@ ul.comments li{
 }
 ul.comments li span.control{
 	position: absolute;
-    left: 95%;
-    top: 10px;
+    right: 1%;
+    top: 5px;
     display: none;
 }
 
