--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,3 @@
 <footer class="footer" style="width:90%;margin:auto">
-  <nav>
-    <ul>
-      <li><%= link_to "About",   '#' %></li>
-      <li><%= link_to "Contact", '#' %></li>
-    </ul>
-  </nav>
+  <p>2016 - Miracle+4 Team, where 4 deathweight burdens hope for miracle to happen.</p>
 </footer>
