--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,3 +1,10 @@
+<% unless logged_in? %>
+<div class="center jumbotron">
+  <h1>Welcome to the Game Geek</h1>
+
+  <%= link_to "Sign up now!", new_user_path, class: "btn btn-lg btn-primary"%>
+</div>
+<% end %>
 <h1>Listing Images</h1>
 <div class="row">
   <div class="col-sm-4 clearfix center" id="search-form">
@@ -6,7 +13,9 @@
      <%= submit_tag "Search",class: "btn btn-primary" %>
     <% end %>
   </div>
+  <% if logged_in? %>
   <%= link_to '', new_image_path, remote:true,class:"btn btn-primary plus glyphicon-plus"%>
+  <% end %>
 </div>
 <div class="row main-content">
     <% @images.each_with_index do |image,index| %>
