--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,6 +8,9 @@
 </p>
 <h1>Listing Images From <strong><%= @user.name %></strong></h1>
 <div class="row main-content">
+    <% if @user.image.length == 0 %>
+    <p>Oops, this user hasn't uploaded any images.</p>
+    <% end %>
     <% @user.image.each_with_index do |image,index| %>
     <div class="col-sm-12">
       <article class="clearfix" >
