minor layout fix

--- a/app/assets/stylesheets/images.scss
+++ b/app/assets/stylesheets/images.scss
@@ -105,6 +105,7 @@ article .content .title{
 	margin-bottom : 10px;
 }
 .comment span{
+	float:left;
     line-height: 10px;
     font: inherit;
 	vertical-align: baseline;
