--- a/app/views/images/show.html.erb
+++ b/app/views/images/show.html.erb
@@ -16,7 +16,7 @@
         <div class="comment clearfix">
           <%if logged_in?%>
           <header>Comment</header>
-          <div style="height: 30px; margin-bottom: 10px;">
+          <div style="height: auto; margin-bottom: 10px;"class="clearfix">
             <figure><%= gravatar_for current_user %></figure>
             <form class="form-group" data-remote="true" action="/image_comments" accept-charset="UTF-8" method="post">
               <input type="text" name="image_comment[comment]" value="" class="form-control input" id="input<%=image.id%>">
