--- a/app/assets/stylesheets/images.scss
+++ b/app/assets/stylesheets/images.scss
@@ -9,7 +9,8 @@ img{
 	max-height: 100%;
 }
 figure{
-	height:100%;
+	height:auto;
+	//max-height: 400px;
 }
 .demo{
   font-size:150%;
@@ -19,17 +20,20 @@ ul li{
 	list-style:none;
 }
 .main-content{
-	width:55%;
+	width:100%;
 	margin:auto;
 }
-
+.container{
+	width:100%;
+}
 .image-content{
 	width:80%;
 	margin:auto;
 }
 .plus{
+	z-index:1000;
 	position:fixed;
-	right:20%;
+	right:20px;
 	bottom:20px;
 	border-radius: 50%;
     width: 70px;
@@ -45,8 +49,12 @@ article{
 	background-color: white;
     border: 1px solid #edeeee;
     border-radius: 3px;
-    margin-bottom: 60px;
+    margin-bottom: 10px;
     margin-right: -1px;
+    height:700px;
+}
+.main-content figure{
+	max-height:400px;
 }
 article header{
 	height: 64px;
@@ -139,7 +147,7 @@ article .content .title{
 }
 ul.comments{
 	overflow-x: hidden;
-	max-height: 200px;
+	max-height: 100px;
 	width: 100%;
 	overflow-y: scroll;
 	font-size:14px!important;
